// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SiteBanner component renders with a banner image (snapshot) 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  height: 40px;
  width: 100%;
  position: absolute;
  z-index: 1000;
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 {
  background-image: url(/banners/test.png);
  -webkit-background-position: center;
  background-position: center;
  -webkit-background-size: cover;
  background-size: cover;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 20px;
  padding: 0 11px;
  font-size: 13px;
  line-height: 20px;
}

@media only screen and (max-width: 767px) {
  .emotion-1 {
    background-image: url(/banners/test-tablet.png);
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    justify-content: space-between;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-1 {
    background-image: url(/banners/test-mobile.png);
    font-size: 11px;
  }
}

<a
    class="site-banner sl_opaque notranslate emotion-0"
    href="https://mongodb.com"
    title="Test Banner"
  >
    <div
      class="emotion-1"
    />
  </a>
</DocumentFragment>
`;

exports[`SiteBanner component renders with custom text (snapshot) 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  height: 40px;
  width: 100%;
  position: absolute;
  z-index: 1000;
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 {
  background-image: url();
  -webkit-background-position: center;
  background-position: center;
  -webkit-background-size: cover;
  background-size: cover;
  background-color: #023430;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 20px;
  padding: 0 11px;
  font-size: 13px;
  line-height: 20px;
}

@media only screen and (max-width: 767px) {
  .emotion-1 {
    background-image: url();
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    justify-content: space-between;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-1 {
    background-image: url();
    font-size: 11px;
  }
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-height: 40px;
}

.emotion-3 {
  display: grid;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  grid-row: 1;
  grid-column: 1;
  height: 40px;
}

.emotion-5 {
  grid-row: 1;
  grid-column: 1;
  color: #023430;
  font-weight: 600;
  line-height: 16px;
  font-size: 12px;
  background-color: #00ED64;
  border: 1px solid #00684A;
  border-radius: 6px;
  height: 22px;
  padding: 3px 8px;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<a
    class="site-banner sl_opaque notranslate emotion-0"
    href="https://mongodb.com"
    title="Test Banner"
  >
    <div
      class="emotion-1"
    >
      <span
        class="sl_opaque notranslate emotion-2"
      >
        This is custom banner text
      </span>
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <svg
            aria-labelledby="branding-shape-title"
            fill="none"
            height="40"
            role="img"
            viewBox="0 0 109 40"
            width="109"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="branding-shape-title"
            >
              MongoDB Branding Shape
            </title>
            <path
              d="M55.9997 98.9928L55.9997 99.0001L55.9998 151C55.9998 165.076 44.5756 176.5 30.4998 176.5C16.4239 176.5 4.99975 165.076 4.99975 151C4.99975 136.372 -6.8721 124.5 -21.5002 124.5L-73.5002 124.5C-87.5761 124.5 -99.0002 113.076 -99.0003 99.0001C-99.0003 84.9242 -87.5761 73.5001 -73.5003 73.5001L-47.2923 73.5001C-18.3108 73.5001 4.99974 49.9789 4.99974 21.208L4.99974 -4.99991C4.99974 -19.0758 16.4239 -30.4999 30.4997 -30.4999C44.5756 -30.4999 55.9997 -19.0758 55.9997 -4.99992C55.9997 9.62821 67.8716 21.5001 82.4997 21.5001C96.5756 21.5001 108 32.9242 108 47.0001C108 61.0759 96.5756 72.5001 82.4997 72.5001C67.8651 72.5001 56.2116 84.377 55.9997 98.9928Z"
              stroke="#00ED64"
            />
          </svg>
        </div>
        <span
          class="sl_opaque notranslate emotion-5"
        >
          DOP
        </span>
      </div>
    </div>
  </a>
</DocumentFragment>
`;
